--- a/docker/stacks/ttrss/komodo.toml
+++ b/docker/stacks/ttrss/komodo.toml
@@ -71,7 +71,7 @@ TTRSS_DB_HOST=ttrss.db
 
 # Bind exposed port to 127.0.0.1 to run behind reverse proxy on the same host.
 # If you plan to expose the container, remove "127.0.0.1:".
-## HTTP_PORT=127.0.0.1:8280
+HTTP_PORT=127.0.0.1:80
 #HTTP_PORT=8280
 
 
