ttrss: OIDC configuration

--- a/docker/stacks/ttrss/komodo.toml
+++ b/docker/stacks/ttrss/komodo.toml
@@ -74,15 +74,15 @@ TTRSS_PLUGINS=auth_internal,auth_oidc,nginx_xaccel
 HTTP_PORT=127.0.0.1:80
 #HTTP_PORT=8280
 
-
-##TTRSS_AUTH_OIDC_NAME=Authentik
-##TTRSS_AUTH_OIDC_URL=https://auth.[[NETWORK_DOMAIN]]/application/o/ttrss/
-##TTRSS_AUTH_OIDC_CLIENT_ID=[[TTRSS_AUTHENTIK_ID]]
-##TTRSS_AUTH_OIDC_CLIENT_SECRET=[[TTRSS_AUTHENTIK_SECRET]]
+# OIDC
+TTRSS_AUTH_OIDC_NAME=Authentik
+TTRSS_AUTH_OIDC_URL=https://auth.[[NETWORK_DOMAIN]]/application/o/[[AUTHENTIK_TTRSS_SLUG]]/
+TTRSS_AUTH_OIDC_CLIENT_ID=[[TTRSS_AUTHENTIK_ID]]
+TTRSS_AUTH_OIDC_CLIENT_SECRET=[[TTRSS_AUTHENTIK_SECRET]]
 
 # in seconds, -1 disables
-##TTRSS_AUTH_OIDC_VALIDATE_INTERVAL=-1
+TTRSS_AUTH_OIDC_VALIDATE_INTERVAL=-1
 
 # or sub, etc
-##TTRSS_AUTH_OIDC_CLIENT_USERNAME_CLAIM=preferred_username
+TTRSS_AUTH_OIDC_CLIENT_USERNAME_CLAIM=preferred_username
 """
