--- a/docker/stacks/whatsupdocker/komodo.toml
+++ b/docker/stacks/whatsupdocker/komodo.toml
@@ -24,4 +24,7 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 WUD_AUTH_OIDC_AUTHENTIK_CLIENTID=[[WHATSUPDOCKER_AUTHENTIK_OAUTH_ID]]
 WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET=[[WHATSUPDOCKER_AUTHENTIK_OAUTH_SECRET]]
 # WHATSUPDOCKER_AUTHENTIK_SLUG=
+
+WUD_REGISTRY_GHCR_PRIVATE_USERNAME: [[WHATSUPDOCKER_GHCR_USERNAME]]
+WUD_REGISTRY_GHCR_PRIVATE_TOKEN: [[WHATSUPDOCKER_GHCR_TOKEN]]
 """
