--- a/docker/stacks/whatsupdocker/komodo.toml
+++ b/docker/stacks/whatsupdocker/komodo.toml
@@ -27,4 +27,7 @@ WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET=[[WHATSUPDOCKER_AUTHENTIK_OAUTH_SECRET]]
 
 WUD_REGISTRY_GHCR_PRIVATE_USERNAME: [[WHATSUPDOCKER_GHCR_USERNAME]]
 WUD_REGISTRY_GHCR_PRIVATE_TOKEN: [[WHATSUPDOCKER_GHCR_TOKEN]]
+
+WUD_REGISTRY_HUB_PUBLIC_LOGIN=[[WHATSUPDOCKER_DOCKERHUB_LOGIN]]
+WUD_REGISTRY_HUB_PUBLIC_TOKEN=[[WHATSUPDOCKER_DOCKERHUB_TOKEN]]
 """
