--- a/docker/stacks/whatsupdocker/compose.yaml
+++ b/docker/stacks/whatsupdocker/compose.yaml
@@ -7,6 +7,10 @@ services:
     container_name: whatsupdocker
     restart: always
     environment:
+      WUD_WATCHER_LOCAL_WATCHBYDEFAULT: false
+      # Docker socket via proxy
+      WUD_WATCHER_LOCAL_HOST: whatsupdocker.dockerproxy
+      WUD_WATCHER_LOCAL_PORT: 2375
       # OAUTH
       WUD_AUTH_OIDC_AUTHENTIK_CLIENTID: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTID}
       WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTSECRET}
@@ -15,14 +19,14 @@ services:
       # GHCR
       WUD_REGISTRY_GHCR_PRIVATE_USERNAME: ${WUD_REGISTRY_GHCR_PRIVATE_USERNAME}
       WUD_REGISTRY_GHCR_PRIVATE_TOKEN: ${WUD_REGISTRY_GHCR_PRIVATE_TOKEN}
-      # dOCKER hUB
+      # DOCKER hUB
       WUD_REGISTRY_HUB_PUBLIC_LOGIN: ${WUD_REGISTRY_HUB_PUBLIC_LOGIN}
       WUD_REGISTRY_HUB_PUBLIC_TOKEN: ${WUD_REGISTRY_HUB_PUBLIC_TOKEN}
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
       - /srv/application_data/whatsupdocker/app/store:/store
     networks:
       - proxy_private
+      - whatsupdocker.dockerproxy
     labels:
       traefik.enable: "true"
       # Frontend => Router
@@ -39,3 +43,17 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+
+  whatsupdocker.dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    container_name: whatsupdocker.dockerproxy
+    restart: always
+    environment:
+      CONTAINERS: 1 # Allow access to viewing containers
+      POST: 0 # Disallow any POST operations (effectively read-only)
+    networks:
+      - whatsupdocker.dockerproxy
+    # ports:
+    #   - 2375:2375
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
