--- a/docker/stacks/whatsupdocker/compose.yaml
+++ b/docker/stacks/whatsupdocker/compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       WUD_WATCHER_LOCAL_WATCHBYDEFAULT: false
       # Docker socket via proxy
-      WUD_WATCHER_LOCAL_HOST: whatsupdocker.dockerproxy
+      WUD_WATCHER_LOCAL_HOST: whatsupdocker.socketproxy
       WUD_WATCHER_LOCAL_PORT: 2375
       # OAUTH
       WUD_AUTH_OIDC_AUTHENTIK_CLIENTID: ${WUD_AUTH_OIDC_AUTHENTIK_CLIENTID}
@@ -26,7 +26,7 @@ services:
       - /srv/application_data/whatsupdocker/app/store:/store
     networks:
       - proxy_private
-      - whatsupdocker.dockerproxy
+      - whatsupdocker.socketproxy
     labels:
       traefik.enable: "true"
       # Frontend => Router
@@ -44,16 +44,19 @@ services:
       retries: 3
       start_period: 10s
 
-  whatsupdocker.dockerproxy:
+  whatsupdocker.socketproxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
-    container_name: whatsupdocker.dockerproxy
+    container_name: whatsupdocker.socketproxy
     restart: always
     environment:
       CONTAINERS: 1 # Allow access to viewing containers
       POST: 0 # Disallow any POST operations (effectively read-only)
     networks:
-      - whatsupdocker.dockerproxy
+      - whatsupdocker.socketproxy
     # ports:
     #   - 2375:2375
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
+
+networks:
+  whatsupdocker.socketproxy:
