homepage: fragment into per-service compose files

--- a/docker/stacks/homepage/komodo.toml
+++ b/docker/stacks/homepage/komodo.toml
@@ -17,6 +17,8 @@ webhook_enabled = false
 run_directory = "docker/stacks/homepage/"
 file_paths = [
   "compose.yaml",
+  "app.yaml",
+  "dockerproxy.yaml",
   "../../networks/proxy_private.yaml",
   "../../volumes/smb-multimedia.yaml"
 ]
